# server/docs/swagger.yaml
@@ -482,6 +482,75 @@ paths:
       summary: 分页获取API列表
       tags:
       - Permission
+  /api/opLog/delete:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: OperationLog模型
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entity.OperationLog'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"删除成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 删除OperationLog
+      tags:
+      - OperationLog
+  /api/opLog/deleteByIds:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: 批量删除OperationLog
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.IdsReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"批量删除成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 批量删除OperationLog
+      tags:
+      - OperationLog
+  /api/opLog/list:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 页码, 每页大小, 搜索条件
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.OperationLogSearch'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 分页获取OperationLog列表
+      tags:
+      - OperationLog
   /base/captcha:
     post:
       consumes:
@@ -936,75 +1005,6 @@ paths:
       summary: 更新菜单
       tags:
       - Menu
-  /req/delete:
-    delete:
-      consumes:
-      - application/json
-      parameters:
-      - description: OperationLog模型
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/entity.OperationLog'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"success":true,"data":{},"msg":"删除成功"}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 删除OperationLog
-      tags:
-      - OperationLog
-  /req/deleteByIds:
-    delete:
-      consumes:
-      - application/json
-      parameters:
-      - description: 批量删除OperationLog
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.IdsReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"success":true,"data":{},"msg":"批量删除成功"}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 批量删除OperationLog
-      tags:
-      - OperationLog
-  /req/list:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: 页码, 每页大小, 搜索条件
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.OperationLogSearch'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"success":true,"data":{},"msg":"获取成功"}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 分页获取OperationLog列表
-      tags:
-      - OperationLogSearch
   /role/create:
     post:
       consumes:
